# robo_remote

./: .gitignore  Cargo.toml  README.md  diagram.json  monitor.sh  wokwi.toml
.cargo/: config.toml
schematics/: schematics.kicad_prl  schematics.kicad_pro  schematics.kicad_sch  slave.kicad_prl  slave.kicad_pro  slave.kicad_sch  sym-lib-table  ~schematics.kicad_sch.lck
src/: lib.rs  protocol.rs
src/drivers/: motor.rs
src/protocol/: comands.rs  message.rs  parser.rs
