[package]
edition = "2024"
name = "robo_remote"
version = "0.1.0"



[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }




esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }


esp-wifi = { version = "0.13.0",  features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "esp-alloc",
  "esp32c6",
  "log",
  "wifi",
  "esp-now",
]}
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }

esp-backtrace = { version = "0.15.1", features = [
  "colors",
  "esp32c6",
  "println",
] }
esp-println = { version = "0.13.1", default-features = true, features = [
  "defmt-espflash",
  "log",
] }
log = "0.4.26"
panic-halt = "1.0.0"
cfg-if = "1.0.0"
embassy-futures = "0.1.1"


# It is necessary to build with optimization level 2 or 3 since
# otherwise, it might not even be able to connect or advertise.
[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"


[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal",rev="9d2005841d0eb3a9d027b10160fe0eb728d96be5"}
esp-wifi = { git = "https://github.com/esp-rs/esp-hal",rev="9d2005841d0eb3a9d027b10160fe0eb728d96be5"}
esp-alloc = { git = "https://github.com/esp-rs/esp-hal",rev="9d2005841d0eb3a9d027b10160fe0eb728d96be5"}