[package]
edition = "2024"
name = "robo_remote"
version = "0.9.0"

[[bin]]
name = "robo_remote"
path = "./src/bin/main.rs"
harness = false

[lib]
harness = false




[dependencies]

embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c6", "executors"] }
esp-wifi = { version = "0.13.0",  features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "esp-alloc",
  "esp32c6",
  "log",
  "wifi",
  "esp-now",
]}

esp-backtrace = { version = "0.15.1", features = [
  "colors",
  "esp32c6",
  "println",
] }
esp-println = { version = "0.13.1", default-features = true, features = [
  "defmt-espflash",
  "log",
] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0"}

log = "0.4.27"
embassy-futures = "0.1.1"
function_name = "0.3.0"


# It is necessary to build with optimization level 2 or 3 since
# otherwise, it might not even be able to connect or advertise.
[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"


[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
